the order page has been converted to vuejs format

--- a/Assignment-4/rapidorintro/order/templates/order/order.html
+++ b/Assignment-4/rapidorintro/order/templates/order/order.html
@@ -158,14 +158,14 @@
             <div  class="col unit_price">
               <h4 class=unitprice style='font-size:20px; text-align:center'>[[product.unit_price]]</h4></div>
           <div  class="col">
-          <input v-on:input='all_calculations(product)' v-model='product.qty ' type="number" class="form-control" ></div>
+          <input v-on:input='all_calculations()' v-model='product.qty ' type="number" class="form-control" ></div>
           
             <div  class="col tax_percent">
               <h4 class='taxpercent' style='font-size:20px; text-align:center'>[[product.tax_percent]]</h4></div>
             <div  class="col line_total">
               <h4 class='line_total' style='font-size:20px; text-align:center'>[[line_total_calc(product.code)]]</h4></div>
             <div class="col destry_the_selected_product " >
-              <button v-on:click="delete_product(product.code)" type="button" style="margin-left:40%; margin-bottom:10% " data-id= 'buttony' class="btn btn-danger delete" ><i class="fas fa-times"></i></button>
+              <button v-on:click="delete_product(product.code)"  type="button" style="margin-left:40%; margin-bottom:10% " data-id= 'buttony' class="btn btn-danger delete" ><i class="fas fa-times"></i></button>
             </div>   
             <hr>
           </div>
@@ -175,31 +175,31 @@
         {% comment %} <div class="total_calculations">
         </div> {% endcomment %}
 
-
-    <div class="row">
+<div class='container' v-show="show">
+    <div class="row" >
       <div class='col align-self-end'>
         <h4> Bill Discount:</h4>
       </div>
       <div class='col align-self-end'>
-      <input v-model="bill_discount" type="number" class="form-control bill_discount" value=0>
+      <input v-on:input='all_calculations()' v-model="bill_discount" type="number" class="form-control bill_discount" value=0>
       </div>
     </div>
 
     <div class='row'>
-    <div class='col align-self-end'>
-      <h4> Discount Total:</h4>
+      <div class='col align-self-end'>
+        <h4> Discount Total:</h4>
+      </div>
+      <div class='col align-self-end'>
+        <h4 class='discount_total'>[[discount_total]]</h4>
+      </div>
     </div>
-    <div class='col align-self-end'>
-      <h4 class='discount_total'>0</h4>
-    </div>
-  </div>
 
     <div class='row'>
       <div class='col align-self-end'>
         <h4> Gross Total:</h4>
       </div>
       <div class='col align-self-end'>
-        <h4 class='gross_total'>0</h4>
+        <h4 class='gross_total'>[[gross_total]]</h4>
       </div>
     </div>
 
@@ -208,7 +208,7 @@
         <h4 >Tax Total: </h4>
       </div>
       <div class='col align-self-end'>
-        <h4 class='tax_total'>0</h4>
+        <h4 class='tax_total'>[[tax_total]]</h4>
       </div>
     </div>
     <hr>
@@ -218,14 +218,15 @@
       </div>
 
       <div class='col align-self-end'>
-        <h4 class='grand_total'>0</h4>
+        <h4 class='grand_total'>[[grand_total]]</h4>
       </div>   
     </div>
-
   </div>
-<div  style='margin-left:auto; 
-    width:200px; '>
-  <button type="button" style='visibility: hidden' class="btn btn-secondary" id='onsubmit' >Submit</button>
+
+ 
+  <div  style='margin-left:auto; width:200px; '>
+  <button v-on:click="order_submit" v-show="show"  type="button"  class="btn btn-secondary" id='onsubmit' >Submit</button>
+
   
 </div>
 <br>
