--- a/Assignment-4/rapidorintro/customer/templates/customer/main.html
+++ b/Assignment-4/rapidorintro/customer/templates/customer/main.html
@@ -1,3 +1,5 @@
+
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
@@ -10,8 +12,10 @@
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
      {% comment %} <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> {% endcomment %}
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href={% static 'style.css'%} rel="stylesheet">
-     <title>Polls</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.css" integrity="sha512-NXUhxhkDgZYOMjaIgd89zF2w51Mub53Ru3zCNp5LTlEzMbNNAjTjDbpURYGS5Mop2cU4b7re1nOIucsVlrx9fA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <link href='/static/style.css?v=2' rel="stylesheet">
+    
+    <title>Customers</title>
   
 
 
@@ -22,12 +26,12 @@
   </head>
   
   <body>
-
+<div id="app">
 
 <div class='document'>
 
     <div class="align-left">
-      <h3>Customers<h3>
+      <h3>Customer<h3>
     </div>
     <div class="align-right">
       <button type="button" id="btn" style='padding: 10px 20px;border: 1px solid rgba(0, 0, 0, 0.623);' class="btn btn-outline-success" data-toggle="modal" data-target="#exampleModalCenter"><b>Add</b></button>
@@ -53,19 +57,19 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>Username: </p>            
-        <input type="text" id="username" class="form-control" placeholder="Name" aria-describedby="basic-addon1">      
-        <br>
         <p>Name: </p>            
-        <input type="text" id="name" class="form-control" placeholder="Name" aria-describedby="basic-addon1">      
+        <input v-model="name1" type="text" id="name" class="form-control" placeholder="Name" aria-describedby="basic-addon1">      
         <br>           
-        <p>Mobile:</p>
-        <input type="number" id="mobile" class="form-control" placeholder="Mobile" aria-describedby="basic-addon1">        
+        <p>User Name:</p>
+        <input v-model="user_name" type="text" id="user_name" class="form-control" placeholder="User Name" aria-describedby="basic-addon1">        
+          <br>
+          <p>Mobile:</p>
+        <input v-model="mobile" type="number" id="mobile" class="form-control" placeholder="Mobile" aria-describedby="basic-addon1">        
           <br>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" id="submit-1" class="btn btn-primary">Create</button>
+        <button type="button" class="btn btn-secondary"  data-dismiss="modal">Close</button>
+        <button v-on:click="create" type="button" data-dismiss="modal" id="submit-1" class="btn btn-primary">Create</button>
       </div>
     </div>
   </div>
@@ -84,19 +88,19 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>Name: </p>
-        <input type="text" id="name-2" class="form-control"  aria-describedby="basic-addon1">      
-        <br>    
-         <p>Username: </p>
-        <input type="text" id="username-2" class="form-control"  aria-describedby="basic-addon1">      
-        <br>       
-        <p>Mobile:</p>
-        <input type="number" id="mobile-2" class="form-control"  value=10 aria-describedby="basic-addon1">
-        <br>
+        <p>Name: </p>            
+        <input v-model="name2" type="text" id="name-2" class="form-control" placeholder="Name" aria-describedby="basic-addon1">      
+        <br>           
+        <p>User Name:</p>
+        <input v-model="user_name2" type="text" id="user_name-2" class="form-control" placeholder="User Name" aria-describedby="basic-addon1">        
+          <br>
+          <p>Mobile:</p>
+        <input v-model="mobile2" type="number" id="mobile-2" class="form-control" placeholder="Mobile" aria-describedby="basic-addon1">        
+          <br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" id="submit-2" class="btn btn-primary">Save changes</button>
+        <button v-on:click="update_customer" type="button" id="submit-2"  data-dismiss="modal" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
@@ -105,46 +109,54 @@
 <br> 
 <div class="document_2">
 <div class="row">
-  <div style="padding-left:29px" class="col"><h3><b>#</b></h3></div>
-  <div class="col"><h3><b>Name</b></h3></div>
-  <div class="col"><h3><b>Username</b></h3></div>
-  <div class="col"><h3><b>Mobile</b></h3></div>
-  <div class="col"><h3><b>Action</b></h3></div>
+    <div style="padding-left:29px" class="col"><h3><b>#</b></h3></div>
+    <div class="col"><h3><b>Name</b></h3></div>
+    <div class="col"><h3><b>User Name</b></h3></div>
+   <div class="col"><h3><b>Mobile</b></h3></div>
+    <div class="col"><h3><b>Action</b></h3></div>
 </div>
+<hr style='border-top: 4px solid black'>
 </div>
 
 
-<hr style='border-top: 4px solid black;'>
 
-<div class="document_3">
-{% for customer in customers %}
+
+<div class="document_2">
+
+  <div  v-for='customer in customer_list'>
   <div class="row">
-    <div style="padding-left:29px" class="col"><h4 style='font-size:20px'>{{customer.id}}</h4></div>
-    <div class="col"><h4 style='font-size:20px'>{{customer.name}}</h4></div>
-    <div class="col"><h4 style='font-size:20px'>{{customer.username}}</h4></div>
-    <div class="col"><h4 style='font-size:20px'>{{customer.mobile}}</h4></div>
+    <div style="padding-left:29px" class="col"><h4 style='font-size:20px'>[[customer.id]]</h4></div>
+    <div class="col"><h4 style='font-size:20px'>[[customer.name]]</h4></div>
+    <div class="col"><h4 style='font-size:20px'>[[customer.username]]</h4></div>
+    <div class="col">
+      <h4  style='font-size:20px'>[[customer.mobile]]</h4>
+    </div>
     <div class="col">
 
-    <button type="button" data-id='{{customer.id}}' class="btn btn-success update"><i style='font-size:36px;' class='fas fa-edit'></i></button>
-    <button type="button" data-id='{{customer.id}}' class="btn btn-danger delete" ><i class="material-icons" style="font-size:36px;color:white">delete</i></button>
+      <button type="button" v-on:click = "fetch_customer_again(customer)" data-toggle="modal" data-target="#exampleModalCenter2" :data-id='[[customer.id]]' class="btn btn-success update"><i style='font-size:36px;' class='fas fa-edit'></i></button>
+      <button type="button" v-on:click = "delete_customer(customer)" :data-id='[[customer.id]]' class="btn btn-danger delete" ><i class="material-icons" style="font-size:36px;color:white">delete</i></button>
     </div> 
-
-
   </div>
-<hr>
-{% endfor %}
+    <hr>
+  </div>
+  
+</div>
     
 
-<div>
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+</div>
+  </body>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src={% static 'customer.js'%}></script>
+ <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.js" integrity="sha512-mgZL3SZ/vIooDg2mU2amX6NysMlthFl/jDbscSRgF/k3zmICLe6muAs7YbITZ+61FeUoo1plofYAocoR5Sa1rQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  </body>
+{% comment %} <script src={% static 'script_2.js'%}></script> {% endcomment %}
+<script src='/static/customer_vue.js?v=5'></script>
 </html>
