--- a/Assignment-4/rapidorintro/product/templates/product/main.html
+++ b/Assignment-4/rapidorintro/product/templates/product/main.html
@@ -56,21 +56,21 @@
       </div>
       <div class="modal-body">
         <p>Name: </p>            
-        <input type="text" id="name" class="form-control" placeholder="Name" aria-describedby="basic-addon1">      
+        <input v-model="name1" type="text" id="name" class="form-control" placeholder="Name" aria-describedby="basic-addon1">      
         <br>           
         <p>Code:</p>
-        <input type="text" id="code" class="form-control" placeholder="Code" aria-describedby="basic-addon1">        
+        <input v-model="code" type="text" id="code" class="form-control" placeholder="Code" aria-describedby="basic-addon1">        
           <br>
           <p>Unit Price:</p>
-        <input type="number" id="unit_price" class="form-control" placeholder="Code" aria-describedby="basic-addon1">        
+        <input v-model="unit_price" type="number" id="unit_price" class="form-control" placeholder="Unit_price" aria-describedby="basic-addon1">        
           <br>
           <p>Tax Percent:</p>
-        <input type="number" id="tax_percent" class="form-control" placeholder="Code" aria-describedby="basic-addon1">        
+        <input v-model="tax_percent" type="number" id="tax_percent" class="form-control" placeholder="Tax_percent" aria-describedby="basic-addon1">        
           <br>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" id="submit-1" class="btn btn-primary">Create</button>
+        <button type="button" class="btn btn-secondary"  data-dismiss="modal">Close</button>
+        <button v-on:click="create" type="button" data-dismiss="modal" id="submit-1" class="btn btn-primary">Create</button>
       </div>
     </div>
   </div>
@@ -83,28 +83,28 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLongTitle">Customer</h3>
+        <h3 class="modal-title" id="exampleModalLongTitle">Edit Product</h3>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         <p>Name: </p>            
-        <input type="text" id="name-2" class="form-control" placeholder="Name" aria-describedby="basic-addon1">      
+        <input v-model="name2" type="text" id="name-2" class="form-control" placeholder="Name" aria-describedby="basic-addon1">      
         <br>           
         <p>Code:</p>
-        <input type="text" id="code-2" class="form-control" placeholder="Code" aria-describedby="basic-addon1">        
+        <input v-model="code2" type="text" id="code-2" class="form-control" placeholder="Code" aria-describedby="basic-addon1">        
           <br>
           <p>Unit Price:</p>
-        <input type="number" id="unit_price-2" class="form-control" placeholder="Code" aria-describedby="basic-addon1">        
+        <input v-model="unit_price2" type="number" id="unit_price-2" class="form-control" placeholder="Code" aria-describedby="basic-addon1">        
           <br>
           <p>Tax Percent:</p>
-        <input type="number" id="tax_percent-2" class="form-control" placeholder="Code" aria-describedby="basic-addon1">        
+        <input v-model="tax_percent2" type="number" id="tax_percent-2" class="form-control" placeholder="Code" aria-describedby="basic-addon1">        
           <br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" id="submit-2" class="btn btn-primary">Save changes</button>
+        <button v-on:click="update_product" type="button" id="submit-2"  data-dismiss="modal" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
@@ -120,35 +120,36 @@
     <div class="col"><h3><b>tax Percent</b></h3></div>
     <div class="col"><h3><b>Action</b></h3></div>
 </div>
+<hr style='border-top: 4px solid black'>
 </div>
 
 
-<hr style='border-top: 4px solid black;'>
 
-<div class="document_3">
 
-  <div class="row" v-for='product in product_list'>
+<div class="document_2">
+
+  <div  v-for='product in product_list'>
+  <div class="row">
     <div style="padding-left:29px" class="col"><h4 style='font-size:20px'>[[product.id]]</h4></div>
     <div class="col"><h4 style='font-size:20px'>[[product.name]]</h4></div>
     <div class="col"><h4 style='font-size:20px'>[[product.code]]</h4></div>
     <div class="col">
-      <h4 v-if="product.unit_price>50" class="color1" style='font-size:20px'>[[product.unit_price]]</h4>
+      {% comment %} <h4 v-if="product.unit_price>50" class="color1" style='font-size:20px'>[[product.unit_price]]</h4>
       <h4 v-else-if="product.unit_price>30" class="color2" style='font-size:20px'>[[product.unit_price]]</h4>
-      <h4 v-else class="color" style='font-size:20px'>[[product.unit_price]]</h4>
+      <h4 v-else class="color" style='font-size:20px'>[[product.unit_price]]</h4> {% endcomment %}
+      <h4  style='font-size:20px'>[[product.unit_price]]</h4>
     </div>
     
     <div class="col"><h4 style='font-size:20px'>[[product.tax_percent]]</h4></div>
     <div class="col">
 
-      <button type="button"  :data-id='[[product.id]]' class="btn btn-success update"><i style='font-size:36px;' class='fas fa-edit'></i></button>
+      <button type="button" v-on:click = "fetch_product_again(product)" data-toggle="modal" data-target="#exampleModalCenter2" :data-id='[[product.id]]' class="btn btn-success update"><i style='font-size:36px;' class='fas fa-edit'></i></button>
       <button type="button" v-on:click = "delete_product(product)" :data-id='[[product.id]]' class="btn btn-danger delete" ><i class="material-icons" style="font-size:36px;color:white">delete</i></button>
     </div> 
-
-
   </div>
-
-<hr>
-
+    <hr>
+  </div>
+  
 </div>
     
 
